[gd_scene load_steps=5 format=3 uid="uid://cbr6rxcrsqp6b"]

[ext_resource type="Texture2D" uid="uid://jfy5rwgqog87" path="res://Assets/Player/light.png" id="1_gs6tf"]
[ext_resource type="Script" path="res://Assets/Mobs/boss_1.gd" id="1_ygmo8"]
[ext_resource type="Texture2D" uid="uid://c53cr2hqyciu7" path="res://icon.svg" id="2_7tjck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opa0v"]

[node name="Boss1" type="CharacterBody2D"]
script = ExtResource("1_ygmo8")

[node name="BossLight" type="PointLight2D" parent="."]
modulate = Color(1, 0.0941176, 0, 1)
self_modulate = Color(1, 0.294118, 1, 1)
position = Vector2(28, 7)
scale = Vector2(0.445153, 1)
color = Color(1, 0.0941176, 0, 1)
shadow_enabled = true
texture = ExtResource("1_gs6tf")
offset = Vector2(633.66, -7)
texture_scale = 6.75

[node name="Area2D" type="Area2D" parent="BossLight"]
position = Vector2(-24.7106, -9)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BossLight/Area2D"]
position = Vector2(-38.1891, 6)
polygon = PackedVector2Array(0, -60, 1089.51, -139, 1204.08, -130, 1235.53, -104, 1266.98, -74, 1284.95, -37, 1287.2, 4, 1278.21, 43, 1242.27, 81, 1206.33, 118, 1087.27, 121, 0, 39)

[node name="PlayerCheck" type="RayCast2D" parent="BossLight/Area2D/CollisionPolygon2D"]
position = Vector2(44.9284, -2)
scale = Vector2(2.24642, 1)
exclude_parent = false
target_position = Vector2(550, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_opa0v")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(0.985763, 0.210542, 0.22434, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_7tjck")

[connection signal="body_entered" from="BossLight/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="BossLight/Area2D" to="." method="_on_area_2d_body_exited"]
